# hello-agent-note

./: .env  .gitignore  1.3智能旅行助手.py  3.2.3调用开源大模型.py  pyproject.toml
chapter4/: .env  ReAct.py  llm_client.py
chapter6/AgentScopeDemo/: main_cn.py
chapter6/AutoGenDemo/: .env  autogen_software_team.py
